--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export("%>%")
 export(build_section_spreadsheet_title)
 export(create_section_spreadsheet_180)
+export(create_section_spreadsheet_200)
 export(delete_section_spreadsheet)
+export(get_section_data)
+export(is_course)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
 importFrom(magrittr,"%>%")
