--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,10 @@ export(create_section_spreadsheet_200)
 export(delete_section_spreadsheet)
 export(get_section_data)
 export(is_course)
+export(is_quarter)
+export(is_section)
+export(list_course_spreadsheets)
+export(save_section_data)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
 importFrom(magrittr,"%>%")
