--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(create_section_spreadsheet_180)
 export(create_section_spreadsheet_200)
 export(delete_section_spreadsheet)
 export(get_section_data)
+export(gs_auth)
 export(is_course)
 export(is_quarter)
 export(is_section)
@@ -13,4 +14,6 @@ export(list_course_spreadsheets)
 export(save_section_data)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
+export(view_section_spreadsheet_200)
+importFrom(googlesheets,gs_auth)
 importFrom(magrittr,"%>%")
