--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(is_quarter)
 export(is_section)
 export(list_course_spreadsheets)
 export(save_section_data)
+export(select_section_sheets)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
 export(view_section_spreadsheet_200)
