--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(delete_section_spreadsheet)
 export(get_section_data)
 export(gs_auth)
 export(is_course)
+export(is_drug)
+export(is_drug_abbr)
 export(is_quarter)
 export(is_section)
 export(list_course_spreadsheets)
