--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export("%>%")
 export(build_section_spreadsheet_title)
 export(combine_section_data_key)
 export(combine_section_data_url)
+export(create_master_spreadsheet)
 export(create_section_spreadsheet_180)
 export(create_section_spreadsheet_200)
 export(delete_section_spreadsheet)
+export(get_master_data)
+export(get_next_strainid)
 export(get_section_data)
 export(gs_auth)
 export(is_course)
@@ -14,11 +17,20 @@ export(is_drug)
 export(is_drug_abbr)
 export(is_quarter)
 export(is_section)
+export(is_strain_id)
 export(list_course_spreadsheets)
+export(number_as_strainid)
+export(plot_mic_plate)
+export(save_master_data)
 export(save_section_data)
 export(select_section_sheets)
+export(strainid_as_number)
+export(validate_section_data)
+export(validate_section_data_180)
+export(validate_section_data_200)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
 export(view_section_spreadsheet_200)
+import(ggplot2)
 importFrom(googlesheets,gs_auth)
 importFrom(magrittr,"%>%")
