--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,13 @@ export(combine_section_data_url)
 export(create_master_spreadsheet)
 export(create_section_spreadsheet_180)
 export(create_section_spreadsheet_200)
+export(create_spreadsheets_180)
 export(delete_section_spreadsheet)
 export(get_master_data)
 export(get_next_strainid)
 export(get_section_data)
+export(get_section_data_180)
+export(get_section_data_180_key)
 export(gs_auth)
 export(is_course)
 export(is_drug)
@@ -19,10 +22,13 @@ export(is_quarter)
 export(is_section)
 export(is_strain_id)
 export(list_course_spreadsheets)
+export(master_add_section_data_180)
+export(number_as_section)
 export(number_as_strainid)
 export(plot_mic_plate)
 export(save_master_data)
 export(save_section_data)
+export(section_as_number)
 export(select_section_sheets)
 export(strainid_as_number)
 export(validate_section_data)
