--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 export("%>%")
 export(build_section_spreadsheet_title)
-export(combine_section_data_key)
-export(combine_section_data_url)
 export(create_master_spreadsheet)
 export(create_section_spreadsheet_180)
 export(create_section_spreadsheet_200)
@@ -28,6 +26,7 @@ export(number_as_strainid)
 export(plot_mic_plate)
 export(save_master_data)
 export(save_section_data)
+export(save_section_data_180)
 export(section_as_number)
 export(select_section_sheets)
 export(strainid_as_number)
