--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,8 @@ export(plot_mic_plate)
 export(save_master_data)
 export(save_section_data_180)
 export(section_as_number)
-export(select_section_sheets)
+export(select_section_spreadsheets)
+export(sheet_exists)
 export(strainid_as_number)
 export(validate_section_data)
 export(validate_section_data_180)
