--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,15 @@ export("%>%")
 export(build_section_spreadsheet_title)
 export(create_master_spreadsheet)
 export(create_section_spreadsheet_180)
-export(create_section_spreadsheet_200)
 export(create_spreadsheets_180)
+export(create_spreadsheets_200)
 export(delete_section_spreadsheet)
 export(get_master_data)
 export(get_next_strainid)
 export(get_section_data_180)
 export(get_section_data_180_key)
+export(get_section_data_200)
+export(get_section_data_200_key)
 export(gs_auth)
 export(is_course)
 export(is_drug)
@@ -22,9 +24,11 @@ export(list_course_spreadsheets)
 export(master_add_section_data_180)
 export(number_as_section)
 export(number_as_strainid)
+export(parse_sheet_title)
 export(plot_mic_plate)
 export(save_master_data)
 export(save_section_data_180)
+export(save_section_data_200)
 export(section_as_number)
 export(select_section_spreadsheets)
 export(sheet_exists)
