--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(section_as_number)
 export(select_section_spreadsheets)
 export(sheet_exists)
 export(strainid_as_number)
+export(theme_bdc_grey)
+export(theme_microtiter)
 export(view_section_spreadsheet)
 export(view_section_spreadsheet_180)
 export(view_section_spreadsheet_200)
