--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,18 +20,21 @@ export(is_quarter)
 export(is_section)
 export(is_strain_id)
 export(list_course_spreadsheets)
+export(load_platemaps)
 export(master_add_section_data_180)
 export(master_add_section_data_200)
 export(number_as_section)
 export(number_as_strainid)
 export(parse_sheet_title)
 export(plot_mic_plate)
+export(read_spec_data)
 export(save_master_data)
 export(save_section_data_180)
 export(save_section_data_200)
 export(section_as_number)
 export(select_section_spreadsheets)
 export(sheet_exists)
+export(strain_name)
 export(strainid_as_number)
 export(theme_bdc_grey)
 export(theme_microtiter)
