--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(is_section)
 export(is_strain_id)
 export(list_course_spreadsheets)
 export(load_platemaps)
+export(make_MIC_control_plots)
+export(make_MIC_section_plots)
 export(master_add_section_data_180)
 export(master_add_section_data_200)
 export(number_as_section)
